Bug 1277260, part 1 - Make PtrInfo into a class and mark it final. r=smaug

MozReview-Commit-ID: 3UJ89eCkBsd